--- a/View/vDocuments.xaml
+++ b/View/vDocuments.xaml
@@ -23,6 +23,17 @@
                 Height="Auto"
                 Margin="731,805,20,10"
                 HorizontalContentAlignment="Right"/>
+
+            <ItemsControl HorizontalAlignment="Left" Name="icPersonnel" 
+                          ItemsSource="{Binding Path=NewButtons}"
+                          Width="523" 
+                          Margin="10,805,0,10">
+                <ItemsControl.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <WrapPanel IsItemsHost="True"/>
+                    </ItemsPanelTemplate>
+                </ItemsControl.ItemsPanel>
+            </ItemsControl>
         </Grid>
 
         <Grid Margin="10,91,10,695">
@@ -105,7 +116,7 @@
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
-              
+
                 <DataGridTemplateColumn Header=" SUBJECT"                    
                     MinWidth="180"
                     Width="400">
@@ -152,6 +163,6 @@
                 </Style>
             </DataGrid.Resources>
         </DataGrid>
-        
+
     </Grid>
 </UserControl>
