--- a/View/vDashboard.xaml
+++ b/View/vDashboard.xaml
@@ -162,7 +162,8 @@
                 AutoGenerateColumns="False"           
                 HorizontalScrollBarVisibility="Disabled"                 
                 AlternatingRowBackground="WhiteSmoke" 
-                Width="582" Height="192">
+                Width="582" Height="192"
+                ItemsSource="{Binding Path=OutgoingData}">
                 <DataGrid.Resources>
                     <Style BasedOn="{StaticResource {x:Type DataGridColumnHeader}}" TargetType="{x:Type DataGridColumnHeader}">
                         <Setter Property="IsEnabled" Value="False"/>
@@ -222,32 +223,6 @@
                     </DataGridTemplateColumn>
                 </DataGrid.Columns>
             </DataGrid>
-            <!--<Border                      
-                Padding="1"                        
-                BorderBrush="Teal"                       
-                CornerRadius="5"                       
-                BorderThickness="2" Margin="10,-100,10,40" Height="580"/>-->
-            <!--<Label 
-                
-                Content="YESTERDAY"
-                Width="328"
-                HorizontalAlignment="Left"
-                Margin="340,-35,0,0"
-                FontSize="20"
-                FontWeight="DemiBold"
-                HorizontalContentAlignment="Center"
-                />
-
-            <Label 
-                
-                Content="WEEK"
-                Width="328"
-                HorizontalAlignment="Left"
-                Margin="680,-35,0,0"
-                FontSize="20"
-                FontWeight="DemiBold"
-                HorizontalContentAlignment="Center"
-                />-->
         </StackPanel>
     </Grid>
 </UserControl>
